force-app/main/default/objects/Apttus__TemplateDynamicSection__c/Apttus__TemplateDynamicSection__c.object-meta.xml
<CustomObject>
    <description>Represents a dynamic section in a template</description>
    <label>Template Dynamic Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Dynamic Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>