force-app/main/default/objects/Apttus__TemplateDynamicSection__c/fields/Apttus__FilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FilterCriteria__c</fullName>
    <description>Criteria spec used for filtering the line items. This is a SOQL WHERE clause</description>
    <inlineHelpText>Criteria spec used for filtering the line items. This is a SOQL WHERE clause</inlineHelpText>
    <label>Filter Criteria</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>