force-app/main/default/objects/Apttus__TemplateDynamicSection__c/fields/Apttus__RulesetName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RulesetName__c</fullName>
    <description>The name of the rule set to evaluate</description>
    <inlineHelpText>The name of the rule set to evaluate</inlineHelpText>
    <label>Ruleset Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>