force-app/main/default/objects/Apttus__TemplateDynamicSection__c/fields/Apttus__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TemplateId__c</fullName>
    <description>ID of the associated template</description>
    <inlineHelpText>ID of the associated template</inlineHelpText>
    <label>Template</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Template Dynamic Sections</relationshipLabel>
    <relationshipName>TemplateDynamicSections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>